anupamtest-main/config-sync/cluster-sync-root/privilage-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container-deny
  annotations:
    configsync.gke.io/cluster-name-selector: autopilot-cluster-1
spec:
  #enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
